complete like and dislike functionality

--- a/public/js/modules/post/views/post.html
+++ b/public/js/modules/post/views/post.html
@@ -30,8 +30,8 @@
                 <h2>Post #{{ post.id}} <small>by : {{ post.user.name}}</small></h2>
                 <p>{{ post.text}}</p>
                 <div class="action-btn">
-                    <a ng-click="likePost(post.id)"><span>2</span> <i class="fa fa-thumbs-up" aria-hidden="true"></i></a>
-                    <a ng-click="dislikePost(post.id)"><span>1</span> <i class="fa fa-thumbs-down" aria-hidden="true"></i></a>
+                    <a ng-click="likePost(post.id)"><span>{{(post.likes | objLength)}}</span> <i class="fa fa-thumbs-up" aria-hidden="true"></i></a>
+                    <a ng-click="dislikePost(post.id)"><span>{{(post.dislikes | objLength)}}</span> <i class="fa fa-thumbs-down" aria-hidden="true"></i></a>
                 </div>
                 <!--<p><a href="#" ng-click="deletePost(post.id)" class="text-muted">Delete</a></p>-->
                 <!-- THE COMMENTS -->
